--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/navbar.css">
 <script src="/js/navbar.js" type="module"></script>
+<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
 <nav>
     <div class="navbar-container">
         <div class="navbar-logo">
@@ -9,8 +10,10 @@
             </a>
         </div>
         <div class="navbar-menu">
-            <!-- <div class="navbar-user-details"></div> -->
             <div class="navbar-connect-wallet-btn">Connect to your wallet</div>
+            <div class="navbar-search-icon">
+                <img src="https://d1dd0qmbf0xvcr.cloudfront.net/LifeChain/search.png">
+            </div>
         </div>
     </div>
 </nav>
