feat: connect contract in front-end, try saving data;

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -36,9 +36,9 @@
         <section class="description-container">
             <div class="description-title">Use Blockchain with Insurance</div>
             <form class="description-form">
-                <input type="text" placeholder="Airline" required>
-                <input type="text" placeholder="Flight Number" required>
-                <input type="date" placeholder="Date of Departure" required>
+                <input type="text" placeholder="Airline" class="airline" required>
+                <input type="text" placeholder="Flight Number" class="flight-number" required>
+                <input type="date" placeholder="Date of Departure" class="daparture-date" required>
                 <button>Pay with wallet</button>
             </form>
         </section>
