fix: update user page user experience, add footer

--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -14,21 +14,29 @@
             <button class="description-btn">Connect to your wallet</button>
         </div>
     </header>
-    <main class="order-list-container hide">
-        <div class="order-list-title">
+    <main class="order-list-container">
+        <div class="order-list-title hide">
             <div>Airline</div>
             <div>Flight Number</div>
             <div>Departure Date</div>
             <div>Delay Status</div>
             <div>Payment Status</div>
         </div>
-        <div class="order-list-item">
-            <div class="airline">CI</div>
-            <div class="flight-number">123</div>
-            <div class="date">2022/10/07</div>
-            <div class="delay">On Time</div>
-            <div class="payment">Unpaid</div>
+        <div class="order-list-item-container">
+            <div class="order-list-title hide">
+                <div class="airline">CI</div>
+                <div class="flight-number">123</div>
+                <div class="date">2022/10/07</div>
+                <div class="delay">On Time</div>
+                <div class="payment">Unpaid</div>
+            </div>
         </div>
     </main>
+    <footer>
+        <div>© 2022 Hsin-I Chang</div>
+        <a href="https://github.com/HsinI65018/LifeChain" class="footer-github">
+            <img src="https://d1dd0qmbf0xvcr.cloudfront.net/LifeChain/github.png">
+        </a>
+    </footer>
 </body>
 </html>
