feat: use TDX api to create flight checking system

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,4 +16,9 @@
             </div>
         </div>
     </div>
+    <div class="error-container">
+        <div class="error-title">Error</div>
+        <div class="error-message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta neque eget at et, elementum. </div>
+        <button class="error-btn">Close</button>
+    </div>
 </nav>
