--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -63,3 +63,48 @@ nav{
 .hide{
     display: none;
 }
+
+/* error-container */
+.error-container{
+    width: 340px;
+    margin: auto;
+    transform: translateY(40px);
+    width: 340px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 60px #AAAAAA;
+    border-radius: 10px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-top: 15px solid #659157;
+}
+.error-message{
+    width: 300px;
+    margin: 10px 0px 10px 0px;
+}
+.error-title{
+    font-size: 25px;
+    font-weight: 700;
+    margin-top: 20px;
+}
+.error-btn{
+    width: 310px;
+    height: 40px;
+    background: #A1C084;
+    border-radius: 5px;
+    border: none;
+    margin-top: 10px;
+    color: #FFFFFF;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+/* error animation */
+.show-animation{
+    animation: 0.7s identifier;
+}
+@keyframes identifier {
+    0% {transform: translateY(-100%)}
+    100% {transform: translateY(0);}
+}
