--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -13,13 +13,16 @@
             <section class="banner-left-section">
                 <div class="banner-info">
                     <div class="banner-info-title">Use Blockchain with Insurance</div>
-                    <div class="banner-info-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta neque eget at et, elementum. Egestas egesollicitudin amet malesuada nec tempor quis. Et mattis </div>
+                    <div class="banner-info-subtitle">
+                        <div>LifeChain helps you insured flights delay, we use blockchain to save your insurance details. </div>
+                        <div>When the delay happened, you will get the insurance compensation automatically, and there is no need to provide your personal details, all you have to do is get the MetaMask account and insure !</div>
+                    </div>
                     <button class="banner-info-btn">Insure Now</button>
                 </div>
             </section>
             <section class="banner-right-section">
                 <div class="banner-insurance">
-                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta neque eget at et, elementum. Egestas eget arcu, volutpat quisque adipiscing. </div>
+                    <div>Make your travel without worries, save your time for making claims.</div>
                     <img src="https://d1dd0qmbf0xvcr.cloudfront.net/LifeChain/insurance.jpg">
                 </div>
             </section>
@@ -30,8 +33,8 @@
             <div class="description-img">
                 <img src="https://d1dd0qmbf0xvcr.cloudfront.net/LifeChain/travel-1.jpg">
             </div>
-            <div class="description-context">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta neque eget at et, elementum. Egestas egesollicitudin amet malesuada nec tempor quis. Et mattis</div>
-            <div class="description-context">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta neque eget at et, elementum. Egestas</div>
+            <div class="description-context">Please provide your flight information including <b>"airline"</b>, <b>"flight number"</b> and <b>"departure date"</b>. If your flight information exist, you will be redirect to MetaMask payment page. You can buy insurance up to two hours before departure.</div>
+            <div class="description-context">Once the transaction completed, you can check the insure progress in look up page. (click the magnifying glass icon)</div>
         </section>
         <section class="description-container">
             <div class="description-title">Use Blockchain with Insurance</div>
