--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,12 +13,13 @@
             <div class="navbar-connect-wallet-btn">Connect to your wallet</div>
             <div class="navbar-search-icon">
                 <img src="https://d1dd0qmbf0xvcr.cloudfront.net/LifeChain/search.png">
+                <div class="search-icon-title">Look Up</div>
             </div>
         </div>
     </div>
     <div class="error-container">
         <div class="error-title">Error</div>
-        <div class="error-message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta neque eget at et, elementum. </div>
+        <div class="error-message">Oops! Can't find your flight, please check your flight information again.</div>
         <button class="error-btn">Close</button>
     </div>
 </nav>
