--- a/public/css/home.css
+++ b/public/css/home.css
@@ -41,10 +41,13 @@ main{
     font-weight: 700;
     color: #000000;
     font-size: 40px;
-    margin-top: 50px;
+    margin-top: 90px;
 }
 .banner-info > .banner-info-subtitle{
     width: 400px;
+}
+.banner-info-subtitle > div{
+    margin-bottom: 30px;
 }
 .banner-info > .banner-info-btn{
     width: 200px;
@@ -114,6 +117,9 @@ article{
 .description-context{
     width: 500px;
     margin-bottom: 30px;
+}
+.description-context > b{
+    color: #659157;
 }
 .description-title{
     width: 500px;
