--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -10,7 +10,7 @@
     <header>
         <img src="https://d1dd0qmbf0xvcr.cloudfront.net/LifeChain/people-search.jpg">
         <div class="description-container">
-            <div class="description-context">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta neque eget at et, elementum. Egestas egesollicitudin amet malesuada nec tempor quis. Et mattis</div>
+            <div class="description-context">Click the bottom to check your flight insurance progress through your MetaMask account. If your flight is delayed, your account will automatically get the insurance compensation.</div>
             <button class="description-btn">Connect to your wallet</button>
         </div>
     </header>
