style: update home page html and css

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -37,12 +37,12 @@
             <div class="description-context">Once the transaction completed, you can check the insure progress in look up page. (click the magnifying glass icon)</div>
         </section>
         <section class="description-container">
-            <div class="description-title">Use Blockchain with Insurance</div>
+            <div class="description-title">Provide Your Flight Information</div>
             <form class="description-form">
                 <input type="text" placeholder="Airline" class="airline" required>
                 <input type="text" placeholder="Flight Number" class="flight-number" required>
                 <input type="date" placeholder="Date of Departure" class="daparture-date" required>
-                <button>Pay with wallet</button>
+                <button>Comfirm Payment</button>
             </form>
         </section>
     </article>
