--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -11,7 +11,7 @@
         <img src="https://d1dd0qmbf0xvcr.cloudfront.net/LifeChain/people-search.jpg">
         <div class="description-container">
             <div class="description-context">Click the bottom to check your flight insurance progress through your MetaMask account. If your flight is delayed, your account will automatically get the insurance compensation.</div>
-            <button class="description-btn">Connect to your wallet</button>
+            <button class="description-btn">Connect To MetaMask</button>
         </div>
     </header>
     <main class="order-list-container">
