--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,7 +10,7 @@
             </a>
         </div>
         <div class="navbar-menu">
-            <div class="navbar-connect-wallet-btn">Connect to your wallet</div>
+            <div class="navbar-connect-wallet-btn">Connect To MetaMask</div>
             <div class="navbar-search-icon">
                 <img src="https://d1dd0qmbf0xvcr.cloudfront.net/LifeChain/search.png">
                 <div class="search-icon-title">Look Up</div>
